--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+		"prepare": "husky install",
 		"dev": "next dev",
 		"debug": "cross-env NODE_OPTIONS='--inspect' next dev",
 		"build": "next build",
@@ -23,6 +24,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.9",
+		"react-yandex-metrika": "^2.6.0",
 		"typescript": "4.9.3"
 	},
 	"devDependencies": {
@@ -32,6 +34,7 @@
 		"cross-env": "^7.0.3",
 		"eslint": "^8.27.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"husky": "^8.0.3",
 		"stylelint": "^14.15.0",
 		"stylelint-config-property-sort-order-smacss": "^9.0.0",
 		"stylelint-config-standard": "^29.0.0",
