--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: top-app-demo
+    image: ghcr.io/gkovalchuk/app-react-next/top-app-demo:develop
     container_name: top-app-demo
     restart: always
     ports:
